Bug 278499 - Dolphin crash when change view mode
Summary: Dolphin crash when change view mode
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-25 20:25 UTC by Rodolfo
Modified: 2011-07-28 13:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rodolfo 2011-07-25 20:25:23 UTC
Application: dolphin (1.6.9)
KDE Platform Version: 4.7.40 (4.7.40 (KDE 4.8 >= 200110623)
Qt Version: 4.7.1
Operating System: Linux 2.6.38.7-ck1-1 x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
Crash when changhe from "Columns view mode" to "Details view Mode"
KUBUNTU NEON

-- Backtrace:
Application: Dolphin (kdeinit4), signal: Aborted
[Current thread is 1 (Thread 0x7f2a1fac3780 (LWP 32241))]

Thread 2 (Thread 0x7f2a081c9700 (LWP 32242)):
#0  0x00007fff5b687861 in clock_gettime ()
#1  0x00007f2a19057146 in clock_gettime (clock_id=1, tp=0x7f2a081c8990) at ../sysdeps/unix/clock_gettime.c:116
#2  0x00007f2a1e258d5e in do_gettime (sec=0x7f2a081c89e8, frac=0x7f2a081c89e0) at tools/qelapsedtimer_unix.cpp:123
#3  0x00007f2a1e258dba in qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#4  0x00007f2a1e348c60 in QTimerInfoList::updateCurrentTime (this=0x8e2660) at kernel/qeventdispatcher_unix.cpp:339
#5  0x00007f2a1e349114 in QTimerInfoList::timerWait (this=0x8e2660, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#6  0x00007f2a1e34591f in timerSourcePrepareHelper (src=0x8e2600, timeout=0x7f2a081c8b3c) at kernel/qeventdispatcher_glib.cpp:136
#7  0x00007f2a1e345abf in timerSourcePrepare (source=0x8e2600, timeout=0x7f2a081c8b3c) at kernel/qeventdispatcher_glib.cpp:169
#8  0x00007f2a18da60a2 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007f2a18da6f9d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007f2a18da7639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007f2a1e3465fa in QEventDispatcherGlib::processEvents (this=0x8515d0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#12 0x00007f2a1e30b532 in QEventLoop::processEvents (this=0x7f2a081c8d70, flags=...) at kernel/qeventloop.cpp:149
#13 0x00007f2a1e30b686 in QEventLoop::exec (this=0x7f2a081c8d70, flags=...) at kernel/qeventloop.cpp:201
#14 0x00007f2a1e1ee062 in QThread::exec (this=0x93dd20) at thread/qthread.cpp:490
#15 0x00007f2a1e2ea84d in QInotifyFileSystemWatcherEngine::run (this=0x93dd20) at io/qfilesystemwatcher_inotify.cpp:248
#16 0x00007f2a1e1f0828 in QThreadPrivate::start (arg=0x93dd20) at thread/qthread_unix.cpp:285
#17 0x00007f2a1df57d8c in start_thread (arg=0x7f2a081c9700) at pthread_create.c:304
#18 0x00007f2a1c33704d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#19 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f2a1fac3780 (LWP 32241)):
[KCrash Handler]
#6  0x00007f2a1c284d05 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f2a1c288ab6 in abort () at abort.c:92
#8  0x00007f2a1e1e5896 in qt_message_output (msgType=QtFatalMsg, buf=0xd97bf8 "ASSERT: \"!m_dolphinViewController->itemView() || (m_dolphinViewController->itemView() == view)\" in file /build/buildd/project-neon-kde-baseapps-2+git20110722+r16835/dolphin/src/views/dolphinview.cpp, "...) at global/qglobal.cpp:2282
#9  0x00007f2a1e1e5a2c in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, msg=0x7f2a1e38d278 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fff5b666330) at global/qglobal.cpp:2328
#10 0x00007f2a1e1e6216 in qFatal (msg=0x7f2a1e38d278 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2511
#11 0x00007f2a1e1e544f in qt_assert (assertion=0x7f2a0de13b00 "!m_dolphinViewController->itemView() || (m_dolphinViewController->itemView() == view)", file=0x7f2a0de13548 "/build/buildd/project-neon-kde-baseapps-2+git20110722+r16835/dolphin/src/views/dolphinview.cpp", line=1264) at global/qglobal.cpp:2027
#12 0x00007f2a0ddd6af1 in DolphinView::deleteView (this=0x8eb3c0) at /build/buildd/project-neon-kde-baseapps-2+git20110725+r16839/dolphin/src/views/dolphinview.cpp:1264
#13 0x00007f2a0ddd278b in DolphinView::setMode (this=0x8eb3c0, mode=DolphinView::DetailsView) at /build/buildd/project-neon-kde-baseapps-2+git20110725+r16839/dolphin/src/views/dolphinview.cpp:214
#14 0x00007f2a0ddf5c17 in DolphinViewActionHandler::slotViewModeActionTriggered (this=0x8385b0, action=0x8d8d00) at /build/buildd/project-neon-kde-baseapps-2+git20110725+r16839/dolphin/src/views/dolphinviewactionhandler.cpp:258
#15 0x00007f2a0ddc6b60 in DolphinViewActionHandler::qt_metacall (this=0x8385b0, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fff5b6666b0) at /build/buildd/project-neon-kde-baseapps-2+git20110725+r16839/obj-x86_64-linux-gnu/dolphin/src/moc_dolphinviewactionhandler.cpp:119
#16 0x00007f2a1e315b3e in QMetaObject::metacall (object=0x8385b0, cl=QMetaObject::InvokeMetaMethod, idx=7, argv=0x7fff5b6666b0) at kernel/qmetaobject.cpp:237
#17 0x00007f2a1e32a7b8 in QMetaObject::activate (sender=0x8d0570, m=0x7f2a1f8c5960, local_signal_index=0, argv=0x7fff5b6666b0) at kernel/qobject.cpp:3280
#18 0x00007f2a1f304b6b in KSelectAction::triggered (this=0x8d0570, _t1=0x8d8d00) at /build/buildd/project-neon-kdelibs-2+git20110721+r92055/obj-x86_64-linux-gnu/kdeui/kselectaction.moc:176
#19 0x00007f2a1f302900 in KSelectAction::actionTriggered (this=0x8d0570, action=0x8d8d00) at /build/buildd/project-neon-kdelibs-2+git20110721+r92055/kdeui/actions/kselectaction.cpp:321
#20 0x00007f2a1f30483b in KSelectAction::qt_metacall (this=0x8d0570, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fff5b666890) at /build/buildd/project-neon-kdelibs-2+git20110721+r92055/obj-x86_64-linux-gnu/kdeui/kselectaction.moc:121
#21 0x00007f2a1e315b3e in QMetaObject::metacall (object=0x8d0570, cl=QMetaObject::InvokeMetaMethod, idx=28, argv=0x7fff5b666890) at kernel/qmetaobject.cpp:237
#22 0x00007f2a1e32a7b8 in QMetaObject::activate (sender=0x8b9fa0, m=0x7f2a1df12500, local_signal_index=0, argv=0x7fff5b666890) at kernel/qobject.cpp:3280
#23 0x00007f2a1d1d8875 in QActionGroup::triggered (this=0x8b9fa0, _t1=0x8d8d00) at .moc/debug-shared/moc_qactiongroup.cpp:146
#24 0x00007f2a1d1d7b50 in QActionGroupPrivate::_q_actionTriggered (this=0x8b9fc0) at kernel/qactiongroup.cpp:93
#25 0x00007f2a1d1d86cd in QActionGroup::qt_metacall (this=0x8b9fa0, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fff5b666a30) at .moc/debug-shared/moc_qactiongroup.cpp:101
#26 0x00007f2a1e315b3e in QMetaObject::metacall (object=0x8b9fa0, cl=QMetaObject::InvokeMetaMethod, idx=11, argv=0x7fff5b666a30) at kernel/qmetaobject.cpp:237
#27 0x00007f2a1e32a7b8 in QMetaObject::activate (sender=0x8d8d00, m=0x7f2a1df123e0, local_signal_index=1, argv=0x7fff5b666a30) at kernel/qobject.cpp:3280
#28 0x00007f2a1d1d5520 in QAction::triggered (this=0x8d8d00, _t1=true) at .moc/debug-shared/moc_qaction.cpp:263
#29 0x00007f2a1d1d4830 in QAction::activate (this=0x8d8d00, event=QAction::Trigger) at kernel/qaction.cpp:1257
#30 0x00007f2a1d1d5c1d in QAction::trigger (this=0x8d8d00) at kernel/qaction.h:218
#31 0x00007f2a1d7a386f in QToolButton::nextCheckState (this=0x8cf3d0) at widgets/qtoolbutton.cpp:1147
#32 0x00007f2a1d6a3a60 in QAbstractButtonPrivate::click (this=0xc91e10) at widgets/qabstractbutton.cpp:528
#33 0x00007f2a1d6a4fcb in QAbstractButton::mouseReleaseEvent (this=0x8cf3d0, e=0x7fff5b667670) at widgets/qabstractbutton.cpp:1121
#34 0x00007f2a1d7a223d in QToolButton::mouseReleaseEvent (this=0x8cf3d0, e=0x7fff5b667670) at widgets/qtoolbutton.cpp:721
#35 0x00007f2a1d24ada9 in QWidget::event (this=0x8cf3d0, event=0x7fff5b667670) at kernel/qwidget.cpp:8200
#36 0x00007f2a1d6a4e21 in QAbstractButton::event (this=0x8cf3d0, e=0x7fff5b667670) at widgets/qabstractbutton.cpp:1080
#37 0x00007f2a1d7a38e5 in QToolButton::event (this=0x8cf3d0, event=0x7fff5b667670) at widgets/qtoolbutton.cpp:1163
#38 0x00007f2a1d1e4d46 in QApplicationPrivate::notify_helper (this=0x76bff0, receiver=0x8cf3d0, e=0x7fff5b667670) at kernel/qapplication.cpp:4445
#39 0x00007f2a1d1e2c9e in QApplication::notify (this=0x7fff5b668540, receiver=0x8cf3d0, e=0x7fff5b667670) at kernel/qapplication.cpp:4006
#40 0x00007f2a1f3fd308 in KApplication::notify (this=0x7fff5b668540, receiver=0x8cf3d0, event=0x7fff5b667670) at /build/buildd/project-neon-kdelibs-2+git20110721+r92055/kdeui/kernel/kapplication.cpp:311
#41 0x00007f2a1e30d99a in QCoreApplication::notifyInternal (this=0x7fff5b668540, receiver=0x8cf3d0, event=0x7fff5b667670) at kernel/qcoreapplication.cpp:732
#42 0x00007f2a1d1e74e5 in QCoreApplication::sendSpontaneousEvent (receiver=0x8cf3d0, event=0x7fff5b667670) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#43 0x00007f2a1d1e1231 in QApplicationPrivate::sendMouseEvent (receiver=0x8cf3d0, event=0x7fff5b667670, alienWidget=0x0, nativeWidget=0x8cf3d0, buttonDown=0x7f2a1df4d828, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3103
#44 0x00007f2a1d2858c0 in QETWidget::translateMouseEvent (this=0x8cf3d0, event=0x7fff5b668110) at kernel/qapplication_x11.cpp:4438
#45 0x00007f2a1d281ffd in QApplication::x11ProcessEvent (this=0x7fff5b668540, event=0x7fff5b668110) at kernel/qapplication_x11.cpp:3442
#46 0x00007f2a1d2bcd12 in x11EventSourceDispatch (s=0x76fd40, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#47 0x00007f2a18da6bcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#48 0x00007f2a18da73a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#49 0x00007f2a18da7639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#50 0x00007f2a1e3465d7 in QEventDispatcherGlib::processEvents (this=0x696d40, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#51 0x00007f2a1d2bd0d2 in QGuiEventDispatcherGlib::processEvents (this=0x696d40, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#52 0x00007f2a1e30b532 in QEventLoop::processEvents (this=0x7fff5b6684a0, flags=...) at kernel/qeventloop.cpp:149
#53 0x00007f2a1e30b686 in QEventLoop::exec (this=0x7fff5b6684a0, flags=...) at kernel/qeventloop.cpp:201
#54 0x00007f2a1e30e08c in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#55 0x00007f2a1d1e1ebe in QApplication::exec () at kernel/qapplication.cpp:3719
#56 0x00007f2a0e7fe361 in kdemain (argc=6, argv=0x74eda0) at /build/buildd/project-neon-kde-baseapps-2+git20110725+r16839/dolphin/src/main.cpp:85
#57 0x0000000000406cc4 in launch (argc=6, _name=0x74cdc8 "/opt/project-neon/bin/dolphin", args=0x74ce34 "\001", cwd=0x0, envc=1, envs=0x74ce47 "", reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x74ce4f "kubuntu;1311620327;453058;5432_TIME47418142") at /build/buildd/project-neon-kdelibs-2+git20110721+r92055/kinit/kinit.cpp:734
#58 0x0000000000407e81 in handle_launcher_request (sock=8, who=0x40d4b4 "launcher") at /build/buildd/project-neon-kdelibs-2+git20110721+r92055/kinit/kinit.cpp:1226
#59 0x00000000004087a7 in handle_requests (waitForPid=0) at /build/buildd/project-neon-kdelibs-2+git20110721+r92055/kinit/kinit.cpp:1419
#60 0x000000000040a25e in main (argc=4, argv=0x7fff5b6693c8, envp=0x7fff5b6693f0) at /build/buildd/project-neon-kdelibs-2+git20110721+r92055/kinit/kinit.cpp:1907

Reported using DrKonqi
Comment 1 Frank Reininghaus 2011-07-27 16:06:06 UTC
Thanks for the bug report! I can reproduce in master and 4.7 (open a 2nd column in the Columns View, then switch to Details View).
Comment 2 Peter Penz 2011-07-28 13:17:13 UTC
Git commit 1cd42071a545eb78e2aa5799ee3136e472494e38 by Peter Penz.
Committed on 28/07/2011 at 15:13.
Pushed by ppenz into branch 'KDE/4.7'.

Remove Q_ASSERT in DolphinView that is invalid for a column-view usecase

The patch won't be forward ported to master as this change will get
obsolete by Dolphin 2.0 during the next 2 weeks.

BUG: 278499
FIXED-IN: 4.7.1

M  +0    -1    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/1cd42071a545eb78e2aa5799ee3136e472494e38