Remove Q_ASSERT in DolphinView that is invalid for a column-view usecase

The patch won't be forward ported to master as this change will get
obsolete by Dolphin 2.0 during the next 2 weeks.

BUG: 278499
FIXED-IN: 4.7.1